# IFT630-TP4

./: .gitignore  CMakeLists.txt  tp4_server.cpp  tp4_server.h
tp4-base/: CMakeLists.txt  Makefile  README.md  client  server
tp4-base/includes/: pcslib.cpp  pcslib.h
tp4-base/scripts/: clean_system_queues.sh
tp4-base/src/client/: main.cpp
tp4-base/src/server/: main.cpp
