# CMakeList.txt : CMake project for tp4_server, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("tp4_server")

# Add source to this project's executable.
add_executable (tp4_server "tp4_server.cpp" "tp4_server.h")

# TODO: Add tests and install targets if needed.
